# ZPUino-HDL

./: .gitignore  Readme.txt
Papilio/papilio_one_250k_vanilla_ise/: papilio_one_250k_vanilla_ise.xise
Papilio/papilio_one_500k_vanilla_ise/: papilio_one_500k_vanilla_ise.xise
Papilio/papilio_pro_lx9_vanilla_ise/: papilio_pro_lx9_vanilla_ise.xise
zpu/hdl/zpuino/: DEVICEREGISTRY.txt  INTRODUCTION  async_fifo.vhd  async_fifo_fwft.vhd  burstctrl_shreg.vhd  cachefill.vhd  clkgen.vhd  dac_simplesd.vhd  dualport_ram.vhd  dualport_ram.vhd.noinit  fifo.vhd  fifo_fwft.vhd  gen-prom-generic-dualport-simple_32.pl  gen-prom-generic-dualport_32.pl  gen-prom-virtex-dualport_32_32.c  generic_dp_ram.vhd  generic_sp_ram.vhd  genspirom.pl  jtag_chain.vhd  jtag_openocd_rbb.vhd  lsu.vhd  openocd_rbb-impl.c  openocd_rbb.vhd  pad-sim.vhd  pad.vhd  pptrace.pl  prescaler.vhd  pty-impl.c  pty.vhd  pulse.vhd  pwm.vhd  s3e_eval_zpuino_top.ucf  s3e_eval_zpuino_top.vhd  shifter.vhd  spi.vhd  spiclkgen.vhd  spimaster.vhd  sram_ctrl.vhd  sram_ctrl8.vhd  stack-s3e.vhd  (+69 more)
zpu/hdl/zpuino/boards/: LIST
zpu/hdl/zpuino/boards/coreep4ce6/: Makefile  bootloader.vhd  coreep4ce6.qpf  coreep4ce6_top.qsf  coreep4ce6_top.sdc  coreep4ce6_top.vhd  mydpram_inst.vhd  mypll.qip  mypll.vhd  mypll_inst.vhd  tb.vhd
zpu/hdl/zpuino/boards/oho_godil/: Makefile  clkgen.vhd  oho_godil.prj  oho_godil.ucf  oho_godil.xst  oho_godil_top.vhd  prom-generic-dp-32.vhd  zpu_config.vhd  zpuino_config.vhd
zpu/hdl/zpuino/boards/papilio-one/: Makefile  clkgen.vhd  papilio_one.prj  papilio_one.ucf  papilio_one.ut  papilio_one.xst  papilio_one_top.vhd  zpu_config.vhd  zpuino_config.vhd
zpu/hdl/zpuino/boards/s3e-starter-kit/: Makefile  clkgen.vhd  prom-generic-dp-32.vhd  s3e_eval_zpuino.prj  s3e_eval_zpuino.ucf  s3e_eval_zpuino.xst  s3e_eval_zpuino_top.ucf  s3e_eval_zpuino_top.vhd  zpu_config.vhd  zpuino_config.vhd
zpu/hdl/zpuino/bootloader/: Makefile  Makefile.sim  boot-c.c  boot-s.S  boot-simulation.cpp  boot-unity-multiboot.cpp  boot.cpp  bootloader.hex  bootloader.s  bootloader.vhd  crt0.S  loader.S  prom-generic-dp-32.vhd  syscall.S  zpu.c  zpuelf.lds
zpu/hdl/zpuino/common/: board_coreep4ce6.h  board_de0nano.h  board_ems11.h  board_minized.h  board_nexys2.h  board_nexys3.h  board_oho_godil.h  board_papilio_duo.h  board_papilio_one.h  board_papilio_plus.h  board_papilio_pro.h  board_papilio_unity.h  board_pipistrello.h  board_posedge_one.h  board_s3e_eval.h  board_xula2.h  register.h  zpuino.h
zpu/hdl/zpuino/contrib/: conv_signed.vhd  simple_sigmadelta.vhd  zpuino_YM2149_linmix.vhd  zpuino_audiomixer.vhd  zpuino_pokey.vhd
zpu/hdl/zpuino/contrib/NetSID/: CREDITS  readme.txt
zpu/hdl/zpuino/contrib/hdmi/: dvid.vhd  hdmi_640_480.vhd  hdmi_generic.vhd  ser10.vhd  tb.vhd  tb_hdmi.vhd  tdms_encoder.vhd  terc4_encoder.vhd  tmds_encoder.vhd  tmdspkg.vhd
zpu/hdl/zpuino/contrib/i2c/: i2c_master_byte_ctrl.vhd  i2c_master_top.vhd
zpu/hdl/zpuino/contrib/papilio_stepper/: papilio_stepper.vhd
zpu/hdl/zpuino/contrib/ps2/: ps2_wishbone.vhd
zpu/hdl/zpuino/contrib/usb/: usb1_crc16.vhd  usb1_crc5.vhd  usb1_pd.vhd  usb_phy.vhd  usb_rx_phy.vhd  usb_tx_phy.vhd  usbctrl.vhd
zpu/hdl/zpuino/core/zpu/: mult.vhd  shifter.vhd  zpu_core_extreme.vhd  zpu_core_extreme_icache.vhd
zpu/hdl/zpuino/core/zpuino/: zpuino_sysctl.vhd  zpuino_top_icache.vhd  zpuino_top_icache_iom.vhd
zpu/hdl/zpuino/dcache/: tb_dcache.vhd  zpuino_dcache.vhd
zpu/hdl/zpuino/devices/: xilinx_icap_wb.vhd  zpuino_pwmblock.vhd
zpu/hdl/zpuino/devices/audio/: zpuino_pwmaudio.vhd  zpuino_sigmadelta.vhd
zpu/hdl/zpuino/devices/gpio/: zpuino_gpio.vhd
zpu/hdl/zpuino/devices/timer/: zpuino_timers.vhd
zpu/hdl/zpuino/devices/uart/: tx_unit.vhd  uart_brgen.vhd  uart_mv_filter.vhd  uart_rx.vhd  zpuino_uart.vhd
zpu/hdl/zpuino/devices/video/: vga_640_480.vhd  vga_zxspectrum.vhd  zpuino_vga_char_ram.vhd
zpu/hdl/zpuino/diagrams/: ioblock.dia  iomodule.dia  iomodule2.dia  iotiming.dia  iotiming1.dia  iotiming2.dia  iotiming3.dia  pps.dia
zpu/hdl/zpuino/doc/: Makefile  about.tex  ack.tex  crc16.tex  gpio.tex  intr.tex  legal.tex  nexys2.tex  p1250.tex  p1500.tex  pps.tex  releasenotes.tex  s3esk.tex  sigmadelta.tex  smallfs.tex  spi.tex  template.tex  timer.tex  uart.tex  zpuino.tex
zpu/hdl/zpuino/gh_vhdl_lib/Frequency_Synthesis/: gh_CORDIC.VHD  gh_Freq_ACC.vhd  (+41 more)
zpu/hdl/zpuino/lib/: iobuf_altera.vhd  oddrff_altera.vhd  oddrff_xilinx.vhd  pad.vhd
zpu/hdl/zpuino/lsu/: lsu.vhd
zpu/hdl/zpuino/multispi/: multispi.vhd
zpu/hdl/zpuino/programmer/: AUTHORS  Makefile  Makefile.am  autogen.sh  bitfile.cpp  bitmerge.cpp  boards.c  boards.h  configure.ac  crc16.c  dlist.c  dlist.h  flash.c  flash.h  flash_atmel.c  flash_m25p.c  flash_sst25vf.c  hdlc.c  hdlc.h  list.c  list.h  makeargv.c  makeargv.h  programmer.c  programmer.h  reader.c  smallfs.c  smallfs.h  sysdeps.h  sysdeps_apple.c  sysdeps_apple.h  sysdeps_linux.c  sysdeps_linux.h  sysdeps_win32.c  sysdeps_win32.h  transport.h
zpu/hdl/zpuino/rgb/: rgbctrl.vhd  rgbctrl2_oss.vhd
zpu/hdl/zpuino/sim/: ACDC_check.vhd  Internal_Logic.vhd  M25P16.vhd  M25P16_driver.vhd  Memory_Access.vhd  mem_util_pkg.vhd
zpu/hdl/zpuino/simulator/: AUTHORS  ChangeLog  Makefile  Makefile.am  autogen.sh  configure.in  crc16.c  crc16.h  crc16_core.c  device.map  executor.S  genflash.c  gpio.c  gpio.h  gui.c  gui.h  intr.c  io.c  io.h  simple-simulator.c  spiflash.c  spiflash.h  timer.c  timer.h  trace.c  trace.h  uart.c  vga.c  vgacharram.c  zpuinointerface.c  zpuinointerface.h  zputypes.h
zpu/hdl/zpuino/simulator/devices/: Makefile.am  crc16.c  crc16_core.c  gpio.c  gpio.h  intr.c  spiflash.c  spiflash.h  timer.c  uart.c  uart.h  vga.c  vgacharram.c
zpu/hdl/zpuino/smallfs-tools/: Makefile.am  configure.in  dumpsmallfs.c  mksmallfs.cpp  smallfs.h
zpu/hdl/zpuino/software/: Makefile  tester.c  zpuelf.lds
zpu/hdl/zpuino/validator/: executor.S  simple-simulator.c
zpu/hdl/zpuino/zcorev3/: rdcache.vhd  zcorev3_dbuf.vhd  zcorev3_dfu.vhd  zcorev3_evu.vhd  zcorev3_exu.vhd  zcorev3_pfu.vhd  zcorev3pkg.vhd
zpu/hdl/zpuino/zpuinoxst/: s3e_eval_zpuino.bit
(+890 files in other folders)
