bin_PROGRAMS=zpuinoprogrammer bitmerge

zpuinoprogrammer_SOURCES= programmer.c programmer.h hdlc.c hdlc.h crc16.c \
	flash.c flash.h transport.h sysdeps.h flash_m25p.c flash_sst25vf.c flash_atmel.c \
	boards.c \
	sysdeps_linux.c \
	sysdeps_win32.c \
	sysdeps_apple.c \
	makeargv.c makeargv.h

bitmerge_SOURCES=bitmerge.cpp bitfile.cpp bitrev.cpp crc16.c \
	makeargv.c makeargv.h
